conversion tool (arbmag_freq_converstool.m)

--- a/input_val.yaml
+++ b/input_val.yaml
@@ -3,26 +3,35 @@ setup:
 s1:
   date_vec: [2020,1,28,17,30,00]
   station_name: S1
-  station_name_8character: WETTZELL
-  station_name_trf_coord: Wz
-  sampling_frequency: 8
+  station_name_8character: KOKEE12M
+  station_name_trf_coord: K2
+  X_trf: [4.0755139837000000e+06,9.317353092000000e+05,4.801629401000000e+06]
+  sampling_frequency: 64
   scan_length: 1
-  fluxdensity_targetsource: 10
+  fluxdensity_targetsource: 50
   fluxdensity_system: 50
-  f0: [8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]  
-  number_of_bits: 1
+  f0: 3016.3
+  number_of_bits: 2
+  signal_type_target_source: gaussian-white-noise
   source_name: 0026+892
   bandpass_filter_name: default
+  arb_mag_file_1: K2bb.txt
+  arb_mag_filter_signal_type_1: super
+  arb_mag_interpolation_res_1: 1e3
+  arb_mag_filter_order: 300
 s2:
   date_vec: [2020,1,28,17,30,00]
   station_name: S2
   station_name_8character: YEBES12M
   station_name_trf_coord: Ys
-  sampling_frequency: 8
+  sampling_frequency: 64
   scan_length: 1
   fluxdensity_targetsource: 10
   fluxdensity_system: 50
-  f0: [8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
-  number_of_bits: 1
+  f0: 3016.3
+  number_of_bits: 2
   source_name: 0026+892
   bandpass_filter_name: default
+
+
+
