It is possible to specify multi-point source data and read it in. Next step is to store it properly in the internal Matlab arrays. E.g. the multi-point data is frequency dependent. It has to assigned to the correct channel/simulation.

--- a/input_val.yaml
+++ b/input_val.yaml
@@ -11,8 +11,9 @@ s1:
   fluxdensity_system: 60
   f0: [8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
   number_of_bits: 1
-  signal_type_target_source: gaussian-white-noise
+  signal_type_target_source: multi-point-gaussian-white-noise
   source_name: 2358+189
+  multi_point_source_file_name: 2358+189.src
 s2:
   date_vec: [2020,1,28,17,30,00]
   station_name: S2
@@ -24,11 +25,9 @@ s2:
   fluxdensity_system: 60
   f0: [8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
   number_of_bits: 1
-  signal_type_target_source: gaussian-white-noise
+  signal_type_target_source: multi-point-gaussian-white-noise
   source_name: 2358+189
-  source_RA: [[8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99], [8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]]
-  source_DE: [8212.99, 8252.99, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
-
+  multi_point_source_file_name: 2358+189.src
 
 
 
