--- a/input_val.yaml
+++ b/input_val.yaml
@@ -9,10 +9,10 @@ s1:
   scan_length: 1
   fluxdensity_targetsource: 20
   fluxdensity_system: 60
-  f0: [2000.99, 8000.0, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
+  f0: [4000.99, 8000.0, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
   number_of_bits: 1
   signal_type_target_source: multi-point-gaussian-white-noise
-  source_name: 2358+189_1
+  source_name: 2358+189
   multi_point_source_file_name: 2358+189_1.src
 s2:
   date_vec: [2020,1,28,17,30,00]
@@ -23,8 +23,8 @@ s2:
   scan_length: 1
   fluxdensity_targetsource: 20
   fluxdensity_system: 60
-  f0: [2000.99, 8000, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
+  f0: [4000.99, 8000, 8352.99, 8512.99, 8732.99, 8852.99, 8892.99, 8932.99]
   number_of_bits: 1
   signal_type_target_source: multi-point-gaussian-white-noise
-  source_name: 2358+189_2
+  source_name: 2358+189
   multi_point_source_file_name: 2358+189_2.src
