correction to random number generation

--- a/input_val.yaml
+++ b/input_val.yaml
@@ -3,10 +3,10 @@ setup:
 s1:
   date_vec: [2020,1,28,17,30,00]
   station_name: S1
-  station_name_8character: WETT12M
-  station_name_trf_coord: Ws
-  sampling_frequency: 64
-  scan_length: 1
+  station_name_8character: KOKEE12M
+  station_name_trf_coord: K2
+  sampling_frequency: 1
+  scan_length: 30
   fluxdensity_targetsource: 20
   fluxdensity_system: 60
   f0: [3032.40,3064.40,3096.40,3224.40,3320.40,3384.40,3448.40,3480.40,5272.40,5304.40,5336.40,5464.40,5560.40,5624.40,5688.40,5720.40, 6392.40, 6424.40, 6456.40, 6584.40, 6680.40, 6744.40, 6808.40, 6840.40,10232.40, 10264.40, 10296.40, 10424.40, 10520.40, 10584.40, 10648.40, 10680.40]
